@@ -1,5 +1,11 @@
 2009-07-12  Mike Kestner  <mkestner@novell.com>
 
+	* glib/GType.cs: add ResolveType event and TypeResolutionHandler delegate
+	declarations.  This mechanism supports the lazy registration of type mappings
+	by bindings.  Patch from Sebastian with minor naming tweek.  [Fixes #497667]
+
+2009-07-12  Mike Kestner  <mkestner@novell.com>
+
 	* generator/Parameters.cs: another owned parameter patch from Sebastian.
 	[Fixes #498498]
 
